clusters/9ka/evcc/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: evcc
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: evcc
  replicas: 0
  template:
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      containers:
        - name: evcc
          image: evcc/evcc:0.317.0
          ports:
          - name: http
            containerPort: 7070
          volumeMounts:
            - name: config
              mountPath: /etc/evcc.yaml
              subPath: evcc.yaml
            - name: db
              mountPath: /data
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE
      volumes:
        - name: db
          persistentVolumeClaim:
            claimName: evcc-db
        - name: config
          persistentVolumeClaim:
            claimName: evcc-config
