clusters/9ka/evcc/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: evcc
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: evcc
