clusters/9ka/evcc/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: evcc
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/hostname: evcc.9ka.nl
    external-dns.alpha.kubernetes.io/target: 431113a6-4cf3-4a66-9750-17113ae2e689.cfargotunnel.com
spec:
  ingressClassName: cilium
  rules:
    - host: evcc.9ka.nl
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: evcc
              port: 
                name: http
